<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_type"/>

    <Spinner
        android:id="@+id/exercises_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_label"/>

    <EditText
        android:id="@+id/NewExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_label_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_time"/>

    <EditText
        android:id="@+id/ExerciseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />




</LinearLayout>