<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_calorie_label"/>

    <EditText
        android:id="@+id/NewCalorieLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_calorie_hint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_calorie_amount"/>

    <EditText
        android:id="@+id/NewCalorieAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

</LinearLayout>